# control-plane-mcp-server

./: .gitignore  CLAUDE.md  README.md  dev.py  install.py  main.py  pyproject.toml  requirements.txt  test_connection.py
control_plane_mcp/: _version.py  server.py
control_plane_mcp/tools/: configure_resource_tool.py  env_override_tool.py  env_resource_tool.py  env_tools.py  project_tools.py  release_tools.py  resource_guide.py
docs/: resource_management_guide.md
pydantic_generated/: deploymentrequestmodel.py
scripts/: generate_pydantic_models.py
tools/: __init__.py  configure_resource_tool.py  env_override_tool.py  env_resource_tool.py  env_tools.py  project_tools.py  release_stream_tool.py  release_tools.py  resource_guide.py
utils/: client_utils.py  validation_utils.py
