[project]
name = "control-plane-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.25.0",
    "facets-control-plane-sdk~=0.1.3",
    "pydantic~=2.11.2",
    "jsonschema~=4.23.0",
]
